--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
+bson==0.5.10
+pymongo==3.12.0
 APScheduler==3.6.3
 environs==7.1.0
+kneed==0.7.0
+matplotlib==3.1.1
 numpy==1.17.3
-pandas==0.25.1
-scikit_learn==0.23.1
-pytest==5.3.2
 pytz==2019.3
-pymongo==3.12.0
-bson==0.5.10
+scikit_learn==0.23.1
+yfinance==0.1.63
