--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,11 @@
+fbprophet==0.7.1
+pystan==2.19.1.1
+scikit_learn==0.23.1
+yfinance==0.1.63
 pymongo==3.12.0
 APScheduler==3.6.3
 environs==7.1.0
 kneed==0.7.0
 matplotlib==3.1.1
-numpy==1.17.3
+# numpy==1.17.3
 pytz==2019.3
-scikit_learn==0.23.1
-yfinance==0.1.63
-pystan==2.19.1.1
-fbprophet==0.7.1
