--- a/experiments/LSTM/config.json
+++ b/experiments/LSTM/config.json
@@ -1,9 +1,9 @@
 {
 	"data": {
-		"filename": "sp500.csv",
 		"columns": [
-			"Close",
-			"Volume"
+			"Volume",
+			"MSFT",
+			"Adj Close"
 		],
 		"sequence_length": 50,
 		"train_test_split": 0.85,
@@ -22,7 +22,7 @@
 				"type": "lstm",
 				"neurons": 100,
 				"input_timesteps": 49,
-				"input_dim": 2,
+				"input_dim": 3,
 				"return_seq": true
 			},
 			{
